# light-yolov8-seg-quantization-tensorrt

./: .gitignore  README.md
AIinfer/: CMakeLists.txt
AIinfer/application/yolov8_app/yolov8_det_cuda/: yolov8_detect.cpp
AIinfer/application/yolov8_app/yolov8_seg_cuda/: yolov8_seg.cpp  yolov8_seg.hpp
AIinfer/mains/: main_yolov8_seg.cpp
AIinfer/utils/common/: arg_parsing.hpp  cv_cpp_utils.cpp
examples/: det_p.py
scripts/: yolov8_onnx_trans.py
ultralytics/: det_train.py  prune.py  ttt.py
ultralytics/cfg/: default.yaml
ultralytics/cfg/models/v8/: yolov8-EfficientFormerV2.yaml  yolov8-c2ffaster.yaml  yolov8-c2ffaster_ema.yaml  yolov8-c3faster.yaml  yolov8-efficientViT.yaml  yolov8-fasternet.yaml  yolov8-light.yaml  yolov8-light2.yaml  yolov8-lighthead.yaml  yolov8-pconv.yaml  yolov8-seg_c3ghost.yaml  yolov8-semantic.yaml  yolov8-sharedHead.yaml  yolov8_VanillaBlock.yaml
ultralytics/data/: dataset.py
ultralytics/engine/: exporter.py  model.py  trainer.py
ultralytics/models/yolo/segment/: train.py
ultralytics/nn/: autobackend.py  tasks.py
ultralytics/nn/backbone/: fasternet.py
ultralytics/nn/modules/: __init__.py  block.py  conv.py  head.py
ultralytics/scripts/: 2023_03_Fasternet.py  commad.txt  det_predict.py  det_seg_train.py  seg_export.py  seg_infer.py  seg_info.py  seg_predict.py  seg_train.py  seg_val.py  train_info.py
ultralytics/utils/: loss.py
yolov8-optimization/: seg_infer.py
yolov8-optimization/infer/: infer_seg_224_224  infer_seg_480_480  infer_seg_480_800  infer_seg_640_640
yolov8-optimization/models/: yolov8n-seg-optimized.pt
yolov8-optimization/models/trt/: trace.json
yolov8-seg-C++/: CMakeLists.txt  main.cpp
yolov8-seg-C++/include/: yolov8-seg.hpp
